# PaperWise

./: .env  .gitignore  README.md  app.py  backend.py  frontend.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
faiss_index/: index.faiss  index.pkl
src/: backend.py  main.py
