[project]
name = "paperwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pymupdf>=1.26.1",
    "streamlit>=1.45.1",
]
